--- a/Graphics.ipynb
+++ b/Graphics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,20 +20,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Datos\n",
     "file_sizes = [\"20GB\", \"30GB\"]\n",
     "chunk_sizes = [\"16MB\", \"32MB\"]\n",
     "time_data = np.array([[199.762, 251.104],  # 16MB\n",
     "                       [239.157, 267.044]]) # 32MB\n",
     "\n",
-    "x = np.arange(len(file_sizes))  # Posiciones en el eje X\n",
-    "width = 0.3  # Ancho de las barras\n",
+    "x = np.arange(len(file_sizes))\n",
+    "width = 0.3\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "rects1 = ax.bar(x - width/2, time_data[0], width, label='16MB')\n",
     "rects2 = ax.bar(x + width/2, time_data[1], width, label='32MB')\n",
     "\n",
-    "# Etiquetas y título\n",
     "ax.set_xlabel(\"File Size (GB)\")\n",
     "ax.set_ylabel(\"Time\")\n",
     "ax.set_title(\"Tiempo de procesamiento para distintos tamaños de Chunk\")\n",
@@ -41,7 +39,6 @@
     "ax.set_xticklabels(file_sizes)\n",
     "ax.legend(title=\"Chunk Size\")\n",
     "\n",
-    "# Mostrar la gráfica\n",
     "plt.show()"
    ]
   }
